<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/layoutForSnackbar"
    tools:context="in.theyoo.yoo.activity.OtpVerificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/verify_otp"
        android:textColor="@color/iconColor"
        android:layout_marginTop="50dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_has_been_send_to"
        android:id="@+id/otp_has_been_send_to_textview"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/otp_edit_text"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/iconColor"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otp_edit_text"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_otp"
        android:textColorHint="@color/iconColor"
        android:textColor="@color/iconColor"
        android:maxLength="4"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_button"
        android:layout_below="@+id/otp_edit_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dark_primary_button"
        android:text="@string/verify"
        android:padding="5dp"
        android:textColor="@color/iconColor" />
</RelativeLayout>
