<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/iconColor"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_centerHorizontal="true"
        android:text="@string/get_free_recharge"
        android:textColor="@color/iconColor"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:stretchColumns="1">

        <TableRow>

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_phone_white" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="phone"
                android:id="@+id/phone_edit_text"
                android:hint="@string/enter_phone_number"
                android:maxLength="10"
                android:textColorHint="@color/iconColor"
                android:textColor="@color/iconColor"/>
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_password_key_white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="textPassword"
                android:id="@+id/password_edit_text"
                android:hint="@string/enter_password"
                android:textColorHint="@color/iconColor"
                android:textColor="@color/iconColor"
                />
        </TableRow>
    </TableLayout>

    <com.andexert.library.RippleView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        app:rv_centered="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/dark_primary_button"
            android:textColor="@color/iconColor"/>

    </com.andexert.library.RippleView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_to_yoo_register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:textColor="@color/iconColor"
        style="@style/TextAppearance.AppCompat.Headline"/>
</RelativeLayout>
